--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class="card" id="html-section">
+      <section class="card-html" id="html-section">
         <h2>HTML</h2>
         <ul>
           <li>The head element contains information about the webpage.</li>
@@ -26,14 +27,16 @@
         </ul>
       </section>
    
-      <section class="card" id="css-section">
+      <section class="card-css" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Shadows are added by coding box-shadow then giving the shadow properties.</li>
         </ul>
       </section>
    
-      <section class="card" id="git-section">
+      <section class="card-git" id="git-section">
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on</li>
@@ -41,7 +44,7 @@
         </ul>
       </section>
    
-      <section class="card" id="javascript-section">
+      <section class="card-java" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
